[workspace]
members = [
    "tracing_test"
]

resolver = "2"
[workspace.dependencies]
clap = {version = "4.5.21", features = ["derive"]}

serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.128"

tokio = { version = "1.40.0", features = ["full"] }
tracing = {version =  "0.1.40" }
tracing-subscriber = { version = "0.3.18" }
tracing-appender = { version =  "0.2.3" }

toml = {version =  "0.8.19" }
async-trait = {version = "0.1.83"}
strum = {version = "0.26.3"}
strum_macros = {version = "0.26.3"}
num_enum = {version = "0.7.3"}

axum = { version = "0.7.7" }
reqwest = { version = "0.12.8" }

chrono = {version = "0.4.38"}
chrono-tz = {version = "0.10.0"}
