[workspace]
members = [ "sync2async",
    "tracing_test"
]

resolver = "2"
[workspace.dependencies]

tokio = { version = "1.40.0", features = ["full"] }
tracing = {version =  "0.1.40" }
tracing-subscriber = { version = "0.3.18" }
tracing-appender = { version =  "0.2.3" }

chrono = {version = "0.4.38"}
dashmap = {version = "6.0.0"}
futures = "0.3.31"
ulid = "1.1.3"